add vercel analytics

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/react": "^2.0.47",
     "@headlessui/react": "^2.2.8",
     "@prisma/client": "^6.16.2",
+    "@vercel/analytics": "^1.5.0",
     "ai": "^5.0.47",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.544.0",
