--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-pdf": "^10.1.0",
+    "sonner": "^2.0.7",
     "zod": "^4.1.9"
   },
   "devDependencies": {
